--- a/public/view/admin/user/NewPasswordModalBox.html
+++ b/public/view/admin/user/NewPasswordModalBox.html
@@ -1,7 +1,7 @@
 
-{% set routerName = 'admin/odemeler' %}
+{% set routerName = 'admin/user' %}
 
-<form style="width: 600px; margin: auto;" method="POST" action="/{{routerName}}/odemeEkleAjax" accept-charset="UTF-8" id="summitBtnFrm" >
+<form style="width: 600px; margin: auto;" method="POST" action="/{{routerName}}/passportchange" accept-charset="UTF-8" id="summitBtnFrm" >
   <div class="card" >
 
     <div class="modal-body">
@@ -10,21 +10,26 @@
       <input class="form-control" id="userID" name="userID" value="{{userID}}" type="hidden">
 
       <div class="row">
-        <div class="col-md-6">
+        <div class="col-md-12">
 
           <div class="form-group">
-            <label for="PasswordNew">Password</label>
-            <input class="form-control {{err.Password_valid}}" id="PasswordNew" name="PasswordNew"
-                   value="" type="Password" autocomplete="off">
+            <label for="pass">Password</label>
+            <input class="form-control {{err.Password_valid}}" id="pass" name="pass"
+                   value="" type="text" autocomplete="off">
             {% if err.Password_error %}
             <div class="invalid-feedback" style="display:block">{{err.Password}}</div>
             {% endif %}
             <button class="btn btn-danger btn-xs" onclick="genPasswordNew()"  type="button">Generate
               Password
             </button>
-            <button class="btn btn-info btn-xs" onclick="ShowPasswordNew()" type="button">Show
-              Password
+            <button class="btn btn-info btn-xs" onclick="HidePasswordNew()" type="button">
+              Hide Password
             </button>
+
+            <br>
+            <input type="checkbox">
+            tum sorumlulugu aliyorum bu kisiye pasaport bilgisini olarak mail gonder --calismiyor henuz
+
 
 
           </div>
